[package]
name = "gallery_macroquad"
version = "0.1.0"
edition = "2021"

[features]
bench = []

[dependencies]
# macroquad = { version = "0.3.15", default-features = false }
macroquad = { path = "./macroquad", default-features = false, features = [] }

# MPMC channel
flume = "0.10.14"

image = { version = "0.23.12" }