[package]
name = "gallery_macroquad"
version = "0.1.0"
edition = "2021"

[features]
bench = ["konst"]

[dependencies]
# macroquad = { version = "0.3.15", default-features = false }
macroquad = { path = "./macroquad", default-features = false, features = [] }

# MPMC channel
flume = "0.10.14"

image = { version = "0.23.12" }
lru = "0.8.1"

# bench
konst = { version = "0.3.2", features = ["parsing", "iter"], optional = true }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"

# Logs
tracing = "0.1"
tracing-subscriber = "0.3"
nu-ansi-term = "0.46.0"
portable-atomic = "0.3"

# type-freak = "0.2.0"
type-freak = { path = "./rust-type-freak" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"